--- a/nodeapp.yaml
+++ b/nodeapp.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: nodeapp-deployment
-  namespace: jenkins
+  namespace: default
   labels:
     app: nodeapp
 spec:
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodeapp-service
-  namespace: jenkins
+  namespace: default
 spec:
   selector:
     app: nodeapp
